Use valueOf for numbers